@@ -38,6 +38,10 @@
     <div class="field">
       <label tal:attributes="for string:$fieldName-groups"
         i18n:translate="">Countries group</label>
+      <div tal:attributes="for string:$fieldName-groups"
+          i18n:translate="" class='formHelp'>
+        <input type="checkbox" checked="checked" id="expand_countries" />
+          If this checkbox is selected then the country group will auto expand to add each Country as a geotag</div>
       <div class="formHelp" i18n:translate="">Select countries group</div>
       <select name="groups" tal:attributes="id string:$fieldName-groups">
       </select>
